# spc5

./: CMakeLists.txt  LICENCE  README.md  jobs-afx64.sh  jobs-plafrim.sh
examples/: clsimple.hpp  load_mm_and_compare.cpp
results/: gentex.py  plot.py  results-arm-7_stats.csv  results-arm-8.csv  results-avx-2.csv  script-stats.sh  script_csv.sh  scripts.sh
results/manual/: res_cage15_float.txt
results/results-0/: res_FullChip_double.txt  res_HV15R_float.txt  res_Hook_1498_float.txt  res_RM07R_double.txt  res_Serena_float.txt  res_Si41Ge41H72_float.txt  res_Si87H76_double.txt  res_Si87H76_float.txt  res_bundle_adj_double.txt  res_cage15_float.txt  res_crankseg_2_double.txt  res_dense_float.txt  res_dielFilterV2real_double.txt  res_dielFilterV2real_float.txt  res_in-2004_double.txt  res_in-2004_float.txt  res_mixtank_new_float.txt  res_ns3Da_double.txt  res_spal_004_double.txt  res_spal_004_float.txt  res_wikipedia-20060925_double.txt  res_wikipedia-20060925_float.txt
results/results-1/: res_CO_float.txt  res_Cube_Coup_dt0_double.txt  res_Si41Ge41H72_double.txt  res_Si87H76_double.txt  res_TSOPF_RS_b2383_c1_double.txt  res_TSOPF_RS_b2383_c1_float.txt  res_crankseg_2_float.txt  res_dielFilterV2real_float.txt  res_in-2004_double.txt  res_in-2004_float.txt  res_mixtank_new_double.txt  res_mixtank_new_float.txt  res_nd6k_float.txt  res_ns3Da_float.txt  res_pdb1HYS_double.txt  res_pwtk_float.txt  res_spal_004_double.txt  res_torso1_float.txt  res_wikipedia-20060925_double.txt
results/results-2/: res_dense_double.txt
results/results-3/: jobs-afx64.sh.o11198  res_FullChip_double.txt  res_FullChip_float.txt  res_Hook_1498_double.txt  res_Serena_float.txt  res_Si41Ge41H72_double.txt  res_Si41Ge41H72_float.txt  res_Si87H76_double.txt  res_TSOPF_RS_b2383_c1_float.txt  res_bundle_adj_double.txt  res_crankseg_2_double.txt  res_dense_float.txt  res_dielFilterV2real_float.txt  res_in-2004_double.txt  res_in-2004_float.txt  res_ldoor_double.txt  res_nd6k_float.txt  res_ns3Da_double.txt  res_pdb1HYS_double.txt  res_pwtk_float.txt  res_spal_004_double.txt  res_torso1_double.txt  res_wikipedia-20060925_float.txt
results/results-4/: res_CO_double.txt  res_CO_float.txt  res_Emilia_923_float.txt  res_FullChip_double.txt  res_FullChip_float.txt  res_Hook_1498_double.txt  res_Hook_1498_float.txt  res_RM07R_float.txt  res_Serena_float.txt  res_Si41Ge41H72_float.txt  res_Si87H76_float.txt  res_dielFilterV2real_double.txt  res_ldoor_float.txt  res_mixtank_new_double.txt  res_nd6k_double.txt  res_nd6k_float.txt  res_ns3Da_float.txt  res_pdb1HYS_float.txt  res_spal_004_double.txt  res_wikipedia-20060925_double.txt
results/results-5/: res_CO_float.txt  res_Emilia_923_float.txt  res_Hook_1498_double.txt  res_Hook_1498_float.txt  res_Serena_float.txt  res_Si41Ge41H72_float.txt  res_TSOPF_RS_b2383_c1_double.txt  res_TSOPF_RS_b2383_c1_float.txt  res_bundle_adj_double.txt  res_crankseg_2_double.txt  res_dielFilterV2real_double.txt  res_in-2004_double.txt  res_in-2004_float.txt  res_mixtank_new_double.txt  res_nd6k_float.txt  res_pdb1HYS_double.txt  res_pwtk_float.txt  res_spal_004_double.txt  res_spal_004_float.txt  res_wikipedia-20060925_double.txt  res_wikipedia-20060925_float.txt
results/results-arm-2/: res_CO_nohsum_double.txt  res_CO_nohsum_float.txt  res_CO_withhsum_double.txt  res_CO_withhsum_float.txt  res_Emilia_923_nohsum_double.txt  res_Emilia_923_nohsum_float.txt  res_Emilia_923_withhsum_double.txt  res_Emilia_923_withhsum_float.txt  res_FullChip_nohsum_double.txt  res_FullChip_nohsum_float.txt  res_FullChip_withhsum_double.txt  res_FullChip_withhsum_float.txt  res_Hook_1498_nohsum_double.txt  res_Hook_1498_nohsum_float.txt  res_Hook_1498_withhsum_double.txt  res_Hook_1498_withhsum_float.txt  res_RM07R_nohsum_double.txt  res_RM07R_nohsum_float.txt  res_RM07R_withhsum_double.txt  res_RM07R_withhsum_float.txt  res_Serena_nohsum_double.txt  res_Serena_nohsum_float.txt  res_Serena_withhsum_double.txt  res_Serena_withhsum_float.txt  res_Si41Ge41H72_nohsum_double.txt  res_Si41Ge41H72_nohsum_float.txt  res_Si41Ge41H72_withhsum_double.txt  res_Si41Ge41H72_withhsum_float.txt  res_Si87H76_nohsum_double.txt  res_Si87H76_nohsum_float.txt  res_Si87H76_withhsum_double.txt  res_Si87H76_withhsum_float.txt  res_TSOPF_RS_b2383_c1_nohsum_double.txt  res_TSOPF_RS_b2383_c1_nohsum_float.txt  res_TSOPF_RS_b2383_c1_withhsum_double.txt  res_TSOPF_RS_b2383_c1_withhsum_float.txt  res_bundle_adj_nohsum_double.txt  res_bundle_adj_nohsum_float.txt  res_bundle_adj_withhsum_double.txt  res_bundle_adj_withhsum_float.txt  (+52 more)
results/results-arm-3/: res_CO_nohsum_double.txt  res_CO_nohsum_float.txt  res_CO_withhsum_double.txt  res_CO_withhsum_float.txt  res_Emilia_923_nohsum_double.txt  res_Emilia_923_nohsum_float.txt  res_Emilia_923_withhsum_double.txt  res_Emilia_923_withhsum_float.txt  res_FullChip_nohsum_double.txt  res_FullChip_nohsum_float.txt  res_FullChip_withhsum_double.txt  res_FullChip_withhsum_float.txt  res_Hook_1498_nohsum_double.txt  res_Hook_1498_nohsum_float.txt  res_Hook_1498_withhsum_double.txt  res_Hook_1498_withhsum_float.txt  res_RM07R_nohsum_double.txt  res_RM07R_nohsum_float.txt  res_RM07R_withhsum_double.txt  res_RM07R_withhsum_float.txt  res_Serena_nohsum_double.txt  res_Serena_nohsum_float.txt  res_Serena_withhsum_double.txt  res_Serena_withhsum_float.txt  res_Si41Ge41H72_nohsum_double.txt  res_Si41Ge41H72_nohsum_float.txt  res_Si41Ge41H72_withhsum_double.txt  res_Si41Ge41H72_withhsum_float.txt  res_Si87H76_nohsum_double.txt  res_Si87H76_nohsum_float.txt  res_Si87H76_withhsum_double.txt  res_Si87H76_withhsum_float.txt  res_TSOPF_RS_b2383_c1_nohsum_double.txt  res_TSOPF_RS_b2383_c1_nohsum_float.txt  res_TSOPF_RS_b2383_c1_withhsum_double.txt  res_TSOPF_RS_b2383_c1_withhsum_float.txt  res_bundle_adj_nohsum_double.txt  res_bundle_adj_nohsum_float.txt  res_bundle_adj_withhsum_double.txt  res_bundle_adj_withhsum_float.txt  (+52 more)
results/results-arm-4/: res_CO_nohsum_double.txt  res_CO_nohsum_facto_double.txt  res_CO_nohsum_float.txt  (+135 more)
src/: farm_sve.h  spc5.cpp  spc5.hpp  spc5_interface.cpp  spc5_interface.h
(+830 files in other folders)
